--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,14 @@
+html{
+	font-size: 62.5%;
+	font-family: "微软雅黑";
+}
+body{
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
 html,body{
 	width: 100%;
 	height: 100%;
-	font-family: "微软雅黑";
 }
 .item{
 	width: 100%;
@@ -11,17 +18,18 @@ html,body{
 	overflow: hidden;
 	transform: translate3d(0px, 0px, 0px);
 }
+
 .title{
-	font-size: 48px;
+	font-size: 4.8rem;
 	color: #666;
 	text-align: center;
-	margin: 70px 0 20px 0;
+	margin: 7rem 0 2rem 0;
 }
 
 .introduce{
 	/*background: #66CCFF;*/
 	text-align: center;
-	z-index: 3;
+	z-index: 4;
 }
 .introduce img,.introduce h2,.introduce p{
 	position: absolute;
@@ -33,41 +41,58 @@ html,body{
 	text-align: center;
 }
 .introduce img{
-	width: 160px;
-	height: 160px;
-	border-radius: 80px;
+	width: 16rem;
+	height: 16rem;
+	border-radius: 8rem;
 	background: #fff;
 	border: none;
-	bottom: 160px;
+	bottom: 16rem;
 	left: 50%;
-	margin-left: -80px;
+	margin-left: -8rem;
 }
 .introduce h2{
 	text-shadow: 1px 2px #22c3aa,2px 4px #aee2d9;;
-	word-spacing: 10px;
-	font-size: 48px;
+	word-spacing: 1rem;
+	line-height: 4.8rem;
+	font-size: 4.8rem;
 	color: #fff;
-	bottom: 80px;
+	bottom: 8rem;
 }
 .introduce p{
+	font-size: 2.6rem;
 	color: #444;
-	line-height: 32px;
-	bottom: 60px;
+	line-height: 3.2rem;
+	bottom: 6rem;
 	font-weight: bold;
 }
+
+.education{
+	z-index: 3;
+}
+.education h3,.education p{
+	color: #fff;
+	text-align: center;
+}
+.education h3{
+	font-size: 3.6rem;
+}
+.education p{
+	font-size: 3rem;
+}
+
 .skill{
 	/*z-index: 4;*/
 	z-index: 2;
 }
 .skill .it-wraper{
-	width: 60%;
+	width: 80%;
 	margin: 0 auto;
 }
 .sk-item{
-	width: 20%;
-	height: 180px;
+	width: 15%;
+	height: 18rem;
 	float: left;
-	margin-right: 40px;
+	margin-right: 4rem;
 	position: relative;
 }
 .sk-item canvas{
@@ -76,7 +101,7 @@ html,body{
 }
 .sk-item h3{
 	font-size: 30px;
-	color: #FFFF99;
+	color: #fff;
 	text-align: center;
 	margin-bottom: 10px;
 }
@@ -107,4 +132,41 @@ html,body{
 	top:-4px;
 	left: -36px;
 	color: #fff;
+}
+@media only screen and (max-width: 50rem) {
+	.item{
+		height: auto;
+		position: relative;
+	}
+	.introduce{
+		height: 46rem;
+	}
+	.pointer{
+		display: none;
+	}
+	.skill .it-wraper{
+		width: 100%;
+	}
+	.sk-item{
+		width: 50%;
+		margin-right: 0;
+	}
+}
+@media only screen and (max-width: 30rem) {
+	.item{
+		height: auto;
+		position: relative;
+	}
+	.introduce{
+		height: 40rem;
+	}
+	.pointer{
+		display: none;
+	}
+	.skill .it-wraper{
+		width: 100%;
+	}
+	.sk-item{
+		width: 50%;
+	}
 }
