修改项目经验样式

--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,41 @@ a{
 .demo .title{
 	margin-top: 4rem;
 }
+.demo .row{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+.exp-item{
+	margin-top: 20px;
+	flex: 1;
+	margin-right: 40px;
+}
+.exp-item p{
+	font-size: 20px;
+}
+.exp-title a{
+	color: #444;
+	font-size: 24px;
+	border-bottom: 1px solid #666;
+}
+.exp-title span{
+	float: right;
+	vertical-align: top;
+}
+.exp-title span i{
+	display: inline-block;
+	height: 24px;
+	line-height: 24px;
+	color: #fff;
+	background: #22c3aa;
+	padding: 0 6px;
+	margin-right: 6px;
+	font-size: 16px;
+	border-radius: 6px;
+}
 
 .pointer{
 	position: fixed;
@@ -215,3 +250,4 @@ a{
 	width: 1000px;
 	margin: 0 auto;
 }
+
