--- a/demo/fifa/css/index.css
+++ b/demo/fifa/css/index.css
@@ -601,7 +601,7 @@ a{
 }
 
 .login-window{
-	/*display: none;*/
+	display: none;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -669,7 +669,7 @@ a{
 }
 
 .mask{
-	/*display: none;*/
+	display: none;
 	width: 100%;
 	height: 100%;
 	position: fixed;
